<resources>

<!-- aA - zZ ################################################################## -->


    <!-- aA - eE-->
    <string name="app_name">Studienplanung</string>
    <string name="action_settings">Einstellungen</string>
    <string name="average">Durchschnitt:</string>

    <string name="calculated"><b><u>Berechnet:</u></b></string>
    <string name="chooseModuleManual">Modulhandbuch auswählen …</string>
    <string name="close">Schliesen</string>
    <string name="cp">CP</string>
    <string name="cpPlural">CPs:</string>
    <string name="cofirmationSend">Bestätigung gesendet ...</string>

    <string name="dateWarning">Prüfung darf nicht in der Vergangenheit oder am heutigen Tag liegen.</string>
    <string name="dateTime">Datum-/Uhrzeit:</string>
    <string name="detailView">Detailansicht</string>

    <string name="edit">Bearbeiten</string>
    <string name="exams">Prüfungen</string>
    <string name="enrolleExamNotAllowed">Anmeldung Fehlgeschlagen!</string>
    <string name="enrolledAt">Angemeldet am:</string>
    <string name="examThirdEnroll">Mehr als drei Anmeldungen für eine Prüfung sind nicht gestattet!!!</string>

    <!-- fF - jJ-->

        <string name="hello_world">Hello world!</string>

        <string name="inputPrognoseNote">Erwünschte Note eingeben.</string>
        <string name="invalidInput">Üngültige Eingabe</string>
        <string name="input"><b><u>Eingabe:</u></b></string>
        <string name="invalidDate">Üngültige Datum!!!</string>
        <string name="inputRoom">Raum eingeben ...</string>


    <!-- kK - oO -->

    <string name="MHB">MHB</string>
    <string name="moduleManual">moduleManual</string>
    <string name="module">module</string>
    <string name="moduleOverView">Modulübersicht</string>
    <string name="M28">M28 Bachelor-Arbeit mit Kolloquium</string>

    <string name="no">Nein</string>
    <string name="noteAverage">Notendurchschnitt:</string>
    <string name="notPassed">Nicht Bestanden:</string>
    <string name="notes">Noten</string>
    <string name="note">Note</string>
    <string name="noteSmallCurrent">Notenwunsch muss unter Ihrem Notendurchschnitt liegen.</string>


    <!-- pP - rR -->

    <string name="page">page</string>
    <string name="passed">Bestanden:</string>
    <string name="position">position</string>
    <string name="prognosis"><u>Prognose</u></string>

    <string name="questionForEnrollExamPraefix">Wirklich für das Modul</string>
    <string name="questUnSubscribePraefix">Sicher vom Modul</string>
    <string name="questionForEnrollExamSuffix">anmelden???</string>
    <string name="questForUnsubscribeModuleSuffix">abmelden???</string>

    <string name="room">Raum:</string>


    <!-- sS - vV -->
    <string name="semesterOverview">Semesterübersicht</string>

    <string name="type">Typ:</string>

    <string name="updateModulePraefix">Änderungen für Modul</string>
    <string name="updateModuleSuffix">übernehmen?</string>
    <string name="unsubscribeModule">Abmelden</string>

    <!--wW - zZ -->
        <string name="warningMultipleEnroll">Mehrfach Anmeldung nicht möglich!!!</string>

    <string name="yes">Ja</string>


    <string name="folder_ser">ser</string>
    <string name="moduleManualSer">ModuleManual.ser</string>
    <string name="file_studentSer">Student.ser</string>
    <string name="dotPlusSemester">. Semester</string>
    <string name="totalView">Gesamtübersicht</string>
    <string name="status">Status</string>
    <string name="whiteSpaces"> </string>
    <string name="content">Inhalt</string>
    <string name="assumption">Voraussetzungen</string>
    <string name="semester">Sem.</string>
    <string name="moduleTitle">Modultitel</string>
    <string name="ects">ECTS</string>
    <string name="examForm">Prüfungsform</string>
    <string name="duration">Dauer [Sem]</string>
    <string name="teachForm">Lehrformen</string>
    <string name="language">Sprache</string>
    <string name="sws">SWS</string>
    <string name="notANumber">NaN</string>
    <string name="editContent">Bearbeiten</string>
    <string name="changesSuccess">Änderungen wurden erfolgreich übernommen.</string>
    <string name="chooseValidAssumption">Gültige Auswahl treffen</string>
    <string name="add">Hinzufügen</string>
    <string name="layoutId">layoutId</string>
    <string name="chooseSemester">Semester auswählen</string>
    <string name="addNotice">Notiz hinzufügen</string>
    <string name="save">Speichern</string>
    <string name="chooseModule">Modul auswählen ...</string>
    <string name="warningEnrollExam">Semester und Modul müssen gesetzt sein, um eine Prüfung anmelden zu können.</string>
    <string name="noValidChoice">Keine gültige Auswahl</string>
    <string name="backSlash">/</string>
    <string name="enrollExam">Prüfung anmelden</string>
    <string name="notesTilYet"><u>Bisher erbrachte Leistungen</u></string>
    <string name="userName">Name</string>
    <string name="inputName">Name eingeben</string>
    <string name="defaultUserName">&lt;Name&gt;</string>
    <string name="key_userName">key_name</string>
    <string name="matrikelNr">Matrikelnr.</string>
    <string name="inputMatrikelNr">Matrikelnr. eingeben</string>
    <string name="matrikelNrDefault">&lt;Matrikelnr.&gt;</string>
    <string name="key_matrikelNr">key_matrikelnr</string>
    <string name="studySubject">Studienfach</string>
    <string name="inputStudySubject">Studienfach eingeben</string>
    <string name="studySubjectDefault">&lt;Studienfach&gt;</string>
    <string name="key_studySubject">key_studienfach</string>
    <string name="semester_">Semester</string>
    <string name="inputSemester">Semester eingeben</string>
    <string name="semesterDefault">&lt;Semester&gt;</string>
    <string name="key_semester">key_semester</string>
    <string name="avatar">Avatar</string>
    <string name="key_checkAvatar">key_avatar</string>
    <string name="show_avatar">Avatar anzeigen?</string>
    <string name="email">Email</string>
    <string name="inputEmail">Email eingeben</string>
    <string name="emailDefault">&lt;Email&gt;</string>
    <string name="key_editEmail">key_editEmail</string>
    <string name="key_checkEmail">key_checkEmail</string>
    <string name="sendEmail">Anmeldungsbestätigung senden?</string>
    <string name="invalid_email">Ungültige Email</string>


    <!-- aA - zZ #########################       FINISH       ################################ -->



    <!-- array: assumption -->
    <string-array name="array_assumptions">
        <item>... </item>
        <item>Inhaltliche Voraussetzungen</item>
        <item>Teilnahme am Modul</item>
        <item>Teilnahme an der Modulprüfung</item>
        <item>Zusätzliche </item>
    </string-array>

    <!-- array: tab_names -->
    <string-array name="tab_names">
        <item>Angemeldet</item>
        <item>Abgemeldet</item>
        <item>Fertiggestellt</item>
        <item>Übersicht</item>
        <item>Projekte</item>
    </string-array>

    <!-- exam_types -->
    <string-array name="exam_types">
        <item>Art auswählen ...</item>
        <item>Schriftl. Klausur</item>
        <item>Mündl. Klausur</item>
        <item>Projekt</item>
        <item>Wissenschaftliche Arbeit</item>
        <item>Präsentation</item>
    </string-array>

    <!--- longClick:dialog:Unsubscribe_edit_module-->
    <string-array name="longClickModule_1">
        <item><b>Abmelden</b></item>
        <item><b>Info</b></item>
    </string-array>

    <string-array name="longClickModule_2">
        <item><b>Anmelden</b></item>
        <item><b>Info</b></item>
    </string-array>



</resources>
