<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dimen_4"
        android:orientation="horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/exams"

            android:id="@+id/overviewGraduation_textView_exams"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_1"

        android:padding="@dimen/dimen_4"
        android:orientation="vertical"

        android:layout_alignParentRight="true">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/passed"

            android:id="@+id/overviewGraduation_textView_passed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notPassed"

            android:id="@+id/overviewGraduation_textView_notPassed"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/noteAverage"

            android:id="@+id/overviewGraduation_textView_noteAverage"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cpPlural"

            android:id="@+id/overviewGraduation_textView_creditPoints"/>
    </LinearLayout>


    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

    </Spinner>













</RelativeLayout>