<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/dimen_4">


    <!-- headline -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/dimen_4"
        android:layout_marginLeft="@dimen/dimen_4"
        android:layout_marginRight="@dimen/dimen_4"
        android:gravity="center_horizontal|center_vertical"

        android:lines="2"

        android:textSize="@dimen/dimen_7"
        android:textColor="@color/black"
        android:textStyle="bold"

        android:id="@+id/informationAboutEnrolledExam_textView_headLine"/>


    <!-- type -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_below="@+id/informationAboutEnrolledExam_textView_headLine"
        android:id="@+id/informationAboutEnrolledExam_relative_type">

        <TextView
           style="@style/textView_enrolledLeftColumn"
            android:text="@string/type"/>

        <TextView
            style="@style/textView_enrolledRightColumn"
            android:layout_marginTop="@dimen/dimen_1"
            android:text="Projekt"
            android:id="@+id/informationAboutEnrolledExam_textView_typeContent"/>
    </RelativeLayout>

    <!-- date/time -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_below="@+id/informationAboutEnrolledExam_relative_type"
        android:id="@+id/informationAboutEnrolledExam_relative_date_time">

        <TextView
            style="@style/textView_enrolledLeftColumn"

            android:text="@string/dateTime"/>

        <TextView
            style="@style/textView_enrolledRightColumn"
            android:text="NaN"
            android:layout_marginBottom="@dimen/dimen_1"
            android:id="@+id/informationAboutEnrolledExam_textView_date"/>

        <TextView
            style="@style/textView_enrolledRightColumn"
            android:layout_below="@+id/informationAboutEnrolledExam_textView_date"
            android:text="NaN"
            android:id="@+id/informationAboutEnrolledExam_textView_time">

        </TextView>

    </RelativeLayout>

    <!-- enrolledTime -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_below="@+id/informationAboutEnrolledExam_relative_date_time"
        android:id="@+id/informationAboutEnrolledExam_relative_enrolled">

        <TextView
            style="@style/textView_enrolledLeftColumn"
            android:lines="2"
            android:text="@string/enrolledAt"
            android:id="@+id/textView_enrolledAt"/>

        <TextView
            style="@style/textView_enrolledRightColumn"
            android:layout_width="@dimen/dimen_25"
            android:text="NaN"
            android:id="@+id/informationAboutEnrolledExam_textView_examSubscribedDateTime"/>
    </RelativeLayout>


    <!-- Room -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_below="@+id/informationAboutEnrolledExam_relative_enrolled"
        android:id="@+id/informationAboutEnrolledExam_relative_room">

        <TextView
            style="@style/textView_enrolledLeftColumn"
            android:layout_marginTop="@dimen/dimen_4"
            android:text="@string/room"/>


        <EditText
            android:layout_width="wrap_content"
            android:layout_height="@dimen/dimen_10"

            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/dimen_1"
            android:layout_marginRight="@dimen/dimen_1"
            android:layout_marginBottom="@dimen/dimen_1"

            android:gravity="center"

            android:background="@color/light_gray"
            android:editable="false"

            android:imeOptions="actionDone"

            android:hint="@string/inputRoom"
            android:id="@+id/informationAboutEnrolledExam_editText_room"/>
    </RelativeLayout>


    <!-- CP -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_below="@+id/informationAboutEnrolledExam_relative_room"
        android:layout_marginLeft="@dimen/dimen_3"
        android:layout_marginRight="@dimen/dimen_3"
        android:layout_marginTop="@dimen/dimen_5"
        android:id="@+id/informationAboutEnrolledExam_relative_cp">

        <TextView
            style="@style/textView_enrolledLeftColumn"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginLeft="@dimen/dimen_1"
            android:text="@string/cp"/>

        <TextView
            android:layout_width="@dimen/dimen_10"
            android:layout_height="@dimen/dimen_10"

            android:layout_marginTop="@dimen/dimen_1"
            android:layout_marginRight="@dimen/dimen_1"
            android:layout_marginBottom="@dimen/dimen_1"
            android:layout_alignParentRight="true"


            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="@dimen/dimen_5"

            android:background="@color/light_blue"

            android:id="@+id/informationAboutEnrolledExam_textView_cp"/>

    </RelativeLayout>



    <!-- State -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_height="@dimen/dimen_12"




        android:layout_marginLeft="@dimen/dimen_3"
        android:layout_marginRight="@dimen/dimen_3"

        android:layout_below="@+id/informationAboutEnrolledExam_relative_cp"
        android:id="@+id/informationAboutEnrolledExam_relative_state">

        <TextView
            style="@style/textView_enrolledLeftColumn"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginLeft="@dimen/dimen_1"

            android:text="@string/status"
            android:id="@+id/textView_state"/>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Anzahl Versuche"
            android:textSize="@dimen/dimen_3"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@id/textView_state"/>



        <View
            android:layout_width="@dimen/dimen_10"
            android:layout_height="@dimen/dimen_10"

            android:layout_marginTop="@dimen/dimen_1"
            android:layout_marginRight="@dimen/dimen_1"
            android:layout_marginBottom="@dimen/dimen_1"
            android:layout_alignParentRight="true"

            android:background="@drawable/border_passed_second"

            android:id="@+id/informationAboutEnrolledExam_view_state">

        </View>

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/info_32x32"

            android:layout_alignParentBottom="true"
            android:layout_toLeftOf="@+id/informationAboutEnrolledExam_view_state"
            android:background="@null"

            android:id="@+id/informationAboutEnrolledExam_imageButton_info">
        </ImageButton>

    </RelativeLayout>


    <!-- note -->
    <RelativeLayout
        style="@style/relativeLayout_infoEnrolled"
        android:layout_marginLeft="@dimen/dimen_3"
        android:layout_marginRight="@dimen/dimen_3"
        android:layout_below="@+id/informationAboutEnrolledExam_relative_state"

        android:id="@+id/informationAboutEnrolledExam_relative_note">

        <TextView
            style="@style/textView_enrolledLeftColumn"
            android:layout_marginTop="@dimen/dimen_4"
            android:layout_marginLeft="@dimen/dimen_1"
            android:text="@string/note"
            android:id="@+id/informationAboutEnrolledExam_textView_note"/>


        <EditText
            android:layout_width="@dimen/dimen_10"
            android:layout_height="@dimen/dimen_10"

            android:layout_marginTop="@dimen/dimen_1"
            android:layout_marginRight="@dimen/dimen_1"
            android:layout_marginBottom="@dimen/dimen_1"
            android:layout_alignParentRight="true"

            android:gravity="center"

            android:textStyle="bold"
            android:editable="false"

            android:imeOptions="actionDone"

            android:background="@color/light_blue"
            android:id="@+id/informationAboutEnrolledExam_editText_note"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/informationAboutEnrolledExam_editText_note"
            android:layout_alignParentBottom="true"
            android:layout_marginRight="@dimen/dimen_1"
            android:layout_marginBottom="@dimen/dimen_1"
            android:text="Note eingeben!!!"
            android:visibility="invisible"
            android:textStyle="bold"
            android:textColor="@color/red"
            android:id="@+id/textView_propmptInputNote"/>

    </RelativeLayout>




</RelativeLayout>